tobe_env/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pixel-istio-gw
  namespace: demo
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    #service.beta.kubernetes.io/azure-load-balancer-ipv4: "10.224.0.7"
spec:
  gatewayClassName: approuting-istio
  listeners:
  - hostname: echo.internal.demo
    name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: demo
spec:
  parentRefs:
  - name: pixel-istio-gw
  rules:
  - backendRefs:
    - name: echo
      port: 80
